# Restaurant-Consultant-Management-Chatbot-Using-LLM-frameworks

./: README.md  docker-compose.yml  n8n_workflow.json  test.json
Architecture/: ARCH.drawio
Requirements/: AI Solutions Candidate Project.docx  ingredients.csv  menu.csv  menu_bom.csv  substitutions.csv
backend/: .env  Dockerfile  conversation_manager.py  cost_engine.py  main.py  ollama_client.py  pyproject.toml  requirements.txt  substitution_engine.py
data/: ingredients.csv  menu.csv  menu_bom.csv  substitutions.csv
frontend/: .env  Dockerfile  requirements.txt  streamlit_app.py
